install `matplotlib` with `pip` in the `update` CI

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -20,6 +20,9 @@ jobs:
         with:
           version: '*'
 
+      - name: System dependencies
+        run: pip install matplotlib
+
       - name: Configure git
         run: |
           git config user.name github-actions
