fix the CI cron rule to run every day at 12AM
it was set to https://cron.help/#*_0_*_*_* but we want
https://cron.help/#0_0_*_*_* :eyes:

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -3,7 +3,7 @@ name: Update trackers and generate figures
 on:
   workflow_dispatch:
   schedule:
-    - cron: '* 0 * * *'
+    - cron: '0 0 * * *'
 
 defaults:
   run:
